# sCRUD

./: LICENSE  README.md  pyproject.toml
scrud/: agents.py  graph.py  index.py  simulation.py
